Bug 296835 - group view selection hidden by itself
Summary: group view selection hidden by itself
Status: RESOLVED FIXED
Alias: None
Product: ktorrent
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Joris Guisson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-26 20:32 UTC by Silver Salonen
Modified: 2012-07-03 06:02 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Silver Salonen 2012-03-26 20:32:18 UTC
User-Agent:       Mozilla/5.0 (X11; Linux i686) AppleWebKit/536.3 (KHTML, like Gecko) Chrome/19.0.1066.0 Safari/536.3 SUSE/19.0.1066.0
Build Identifier: 

In the new 4.2 there's "View -> Group View Visible" which I'd like always to be open to quickly switch between downloads and uploads. Sometimes when I open KTorrent, the view is hidden, so I have to open it again.

Reproducible: Sometimes

Steps to Reproduce:
1. Open KTorrent
2. Toggle "View -> Group View Visible" on
3. Close KTorrent
4. Open KTorrent
Actual Results:  
4. Sometimes "View -> Group View Visible" is off

Expected Results:  
4. "View -> Group View Visible" should always be as it was when KTorrent was closed the last time
Comment 1 Joris Guisson 2012-04-12 18:06:42 UTC
Can't reproduce this issue.
Comment 2 Silver Salonen 2012-04-12 18:25:28 UTC
OK, but is there anything for me to do to debug it somehow?

BTW, it happens quite randomly - sometimes it works OK 5 times in a row, but then the view is gone again..
Comment 3 Joris Guisson 2012-04-13 18:02:59 UTC
The state is saved to ~/.kde/share/config/ktorrentrc and restored at startup. File must be getting corrupted.

After you see it going wrong and ktorrent is still running, open the file in a text editor. There should be a section like this:

[GroupView]
Active Torrents=true
All Torrents=true
Custom Groups=true
Downloads=true
Passive Torrents=true
Uploads=true
all=true
custom=true
visible=true

Check if visibile is set to true.
Comment 4 Silver Salonen 2012-04-13 19:40:15 UTC
Just saw it and there was "visible=false". I didn't currently manage to get the view hidden by itself though.
What I noticed is that when I made it visible, it was not written to the config right away, but only after when I quit KTorrent. So maybe the problem is that once it's hidden for some reason and I make it visible, and I don't quit KTorrent, but reboot machine, "visible=true" is not getting written into the config?
I don't actually know how or when the configurations are written though, just guessing :)
Comment 5 Joris Guisson 2012-04-14 10:08:54 UTC
The configuration is saved when ktorrent is shutting down. If ktorrent gets forcibly killed when the computer is shutting down, then it might not get saved.
Comment 6 Joris Guisson 2012-04-21 10:20:08 UTC
Git commit 969bcbc727cb0c8581fd93de084e5149795e31e2 by Joris Guisson.
Committed on 21/04/2012 at 12:19.
Pushed by guisson into branch 'master'.

Add new SignalCatcher class to handle UNIX signals

M  +1    -0    ChangeLog
M  +54   -3    src/util/signalcatcher.cpp
M  +34   -0    src/util/signalcatcher.h

http://commits.kde.org/libktorrent/969bcbc727cb0c8581fd93de084e5149795e31e2
Comment 7 Joris Guisson 2012-04-21 10:21:48 UTC
Git commit 9a62058e0535b094566314a0a1cf082afa8efbef by Joris Guisson.
Committed on 21/04/2012 at 12:21.
Pushed by guisson into branch 'master'.

Catch SIGINT and SIGTERM and do a clean shutdown

M  +1    -0    ChangeLog
M  +4    -2    ktorrent/core.cpp
M  +9    -0    ktorrent/main.cpp

http://commits.kde.org/ktorrent/9a62058e0535b094566314a0a1cf082afa8efbef
Comment 8 Silver Salonen 2012-07-02 08:36:24 UTC
This still happens quite frequently in KTorrent 4.2. I never hide the group view myself, but it's sometimes still hidden after I've marked it visible and quit KTorrent normally, not by shutting down PC or logging out of KDE.
Comment 9 Joris Guisson 2012-07-02 16:27:24 UTC
The fix is not part of 4.2, it will be part of 4.3
Comment 10 Silver Salonen 2012-07-03 06:02:08 UTC
My logic says that the question is not whether the configuration is saved or not, because I have NEVER hidden the group view myself. It looks like something sets the group view to be hidden upon exiting.