Catch SIGINT and SIGTERM and do a clean shutdown

BUG: 296835